--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:theme="@style/Theme.MyToDoList"
         tools:targetApi="31">
         <activity
-            android:name=".View.signUpActivity"
+            android:name=".View.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".View.SignUpActivity"
             android:exported="false" />
         <activity
             android:name=".View.MyTodoLocalActivity"
