--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,22 @@
         android:theme="@style/Theme.MyToDoList"
         tools:targetApi="31">
         <activity
+            android:name=".View.AddLocalTaskActivity"
+            android:exported="false" />
+        <activity
+            android:name=".View.AddLocalTodoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".View.LocalTodoDetailActivity"
+            android:exported="false" />
+        <activity
             android:name=".View.LoginActivity"
             android:exported="false" />
         <activity
             android:name=".View.SignUpActivity"
             android:exported="false" />
         <activity
-            android:name=".View.MyTodoLocalActivity"
+            android:name=".View.MyLocalTodoActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
