add upd et del for tasks

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.MyToDoList"
         tools:targetApi="31">
         <activity
+            android:name=".View.UpdLocalTaskActivity"
+            android:exported="false" />
+        <activity
             android:name=".View.AddLocalTaskActivity"
             android:exported="false" />
         <activity
