--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.MyToDoList"
         tools:targetApi="31">
         <activity
+            android:name=".View.SharedTodoDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".View.SharedTodoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".View.UpdLocalTodoActivity"
+            android:exported="false" />
+        <activity
             android:name=".View.UpdLocalTaskActivity"
             android:exported="false" />
         <activity
